--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,26 @@ jobs:
           # git config --global pull.rebase true 
           git pull --rebase origin dev
           git push origin dev
+
+  on_merged:
+    if: github.event.pull_request.merged == true && (github.head_ref == 'main' || startsWith(github.head_ref, 'release-') || startsWith(github.head_ref, 'hotfix-'))
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+          
+      - name: Rebase through Merge request
+        env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.email github-actions@github.com
+          git config --global user.name github-actions
+          git fetch origin
+          echo "Pull request from branch ${{github.head_ref}} was merged!"  
+          git checkout development
+          git pull origin development
+          git rebase origin/${{github.head_ref}}
+          git push origin development
           
     
       
