--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
        - name: Checkout code
          uses: actions/checkout@v2
+         with:
+            fetch-depth: 0    
+            
        - name: Dump GitHub context
          env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
