--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,12 @@ jobs:
           BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's/refs\/heads\///')
           
           #git checkout -b origin/dev
-          git checkout dev
-          
+          git checkout dev                  
+          git status
+          git checkout $BRANCH_NAME
           git status
           echo 1
-          git rebase origin dev
+          git rebase dev
           echo 2
           git status
           git add .
